# Replit

./: .replit  database.py  db_management.py  main.py  models.py  pyproject.toml  replit.nix  seed_data.py
migrations/versions/: dc04cc183903_initial_migration.py
static/css/: styles.css
static/js/: main.js
templates/: 500.html  about.html  base.html  dashboard.html  edit_profile.html  index.html  leaders.html  login.html  profile.html  register.html
